<resources>
    <string name="app_name">vehicle</string>
    <string name="create_new_account">Create New Account</string>
    <string name="i_have_an_account">I have an account</string>
    <string name="username">Username</string>
    <string name="email">E-mail</string>
    <string name="password">password</string>
    <string name="CreateAccount">create_account</string>
    <string name="login">Login</string>
    <string name="login_your_account">Login with your account</string>
    <string name="loginEmail">E-mail</string>
    <string name="Password">Password</string>
    <string name="create_account">Create Account</string>
    <string name="rent_a_vehicle">rent_a_vehicle</string>
    <string name="renta_vehicle">Rent a Vehicle</string>
    <string name="book_a_vehicle">Book a Vehicle</string>
    <string name="display_my_rides">Display My Rides</string>
    <string name="load_credit">Load Credit</string>
    <string name="report_broken_vehicle">Report Broken Vehicle</string>
    <string name="display_gift_coupon">Display Gift Coupons</string>
    <string name="adult_user">I am an adult.</string>
    <string name="child_user">I am a child.</string>
    <string name="age">102/5000 Register as an adult user if you are over 15, or as a child user if you are under 15.</string>
    <string name="agePolicy">Register as an adult user if you are over 15, or as a child user if you are under 15.</string>
    <string name="gift_coupon">My Gifts</string>
    <string name="create_child_account">Create Child Account</string>
    <string name="tracking_child">Tracking Child</string>
    <string name="title_activity_yanmenu">yanmenu</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_navigation_drawer">NavigationDrawerActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
