<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/button_design">
   <TextView
       android:id="@+id/txtInfo1"
       android:layout_width="wrap_content"
       android:layout_height="wrap_content"
       android:layout_alignParentStart="true"
       android:layout_marginStart="10dp"
       android:layout_marginTop="50dp"
       android:textColor="@android:color/black"
       android:text="@string/login_your_account"
       android:textSize="20sp" />

   <EditText
       android:id="@+id/txtEmailLogin"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/txtInfo1"
       android:layout_centerHorizontal="true"
       android:layout_marginStart="10dp"
       android:layout_marginTop="36dp"
       android:layout_marginEnd="10dp"
       android:hint="@string/loginEmail"
       android:inputType="textEmailAddress" />

   <EditText
       android:id="@+id/txtPasswordLogin"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/txtEmailLogin"
       android:layout_alignParentStart="true"
       android:layout_alignParentEnd="true"
       android:layout_centerHorizontal="true"
       android:layout_marginStart="6dp"
       android:layout_marginEnd="5dp"
       android:layout_marginBottom="50dp"
       android:hint="@string/Password"
       android:inputType="textPassword" />

   <Button
       android:id="@+id/btnLogin2"
       android:layout_width="match_parent"
       android:layout_height="wrap_content"
       android:layout_below="@+id/txtPasswordLogin"
       android:onClick="openAdultMenuActivity"
       android:background="@drawable/button_selector"
       android:text="@string/login"/>
</RelativeLayout>